redis-and-mysql/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: scbs-local-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:6.2.5-alpine
        resources:
          limits:
            memory: "128Mi"
            cpu: "256m"
        ports:
        - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-manager
  namespace: scbs-local-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-manager
  template:
    metadata:
      labels:
        app: redis-manager
    spec:
      containers:
      - name: redis-manager
        image: rediscommander/redis-commander:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "256m"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: scbs-local-dev
spec:
  selector:
    app: redis
  type: NodePort
  ports:
  - port: 6379
    targetPort: 6379
    nodePort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: redis-manager
  namespace: scbs-local-dev
spec:
  selector:
    app: redis-manager
  ports:
  - port: 8081
    targetPort: 8081
